add simple queue producer and consumer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ path = "src/client.rs"
 [[bin]]
 name = "server"
 path = "src/server.rs"
+[[bin]]
+name = "demo"
+path = "src/demo.rs"
 
 [dependencies]
 prost = "0.12.1"
