[round-robin] add random duration as workload

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/server.rs"
 prost = "0.12.1"
 tokio = { version = "1.32.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
 tonic = "0.10.2"
+rand = "0.8"
 
 [build-dependencies]
 tonic-build = "0.10.2"
