--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,11 @@
-[package]
-name = "rust-grpc"
-version = "0.1.0"
-edition = "2021"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+members = [
+    "exchanges",
+    "protos",
+    "ruuster_grpc",
+    # "utils",
+    "apps",
+]
 
-[[bin]]
-name = "client"
-path = "src/client.rs"
-[[bin]]
-name = "server"
-path = "src/server.rs"
-
-[dependencies]
-log = "0.4.20"
-env_logger = "0.10.1"
-prost = "0.12.1"
-tokio = { version = "1.32.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
-tokio-stream = "0.1.14"
-tonic = "0.10.2"
-rand = "0.8"
-exchanges = {path = "exchanges"}
-
-[build-dependencies]
-tonic-build = "0.10.2"
+resolver = "2"
