--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "exchanges"
+name = "utils"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-path = "src/exchanges.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-prost = "0.12.3"
-tonic = "0.10.2"
-protos = { path = "../protos" }
