--- a/ruuster_grpc/Cargo.toml
+++ b/ruuster_grpc/Cargo.toml
@@ -13,8 +13,11 @@ log = "0.4.20"
 env_logger = "0.10.1"
 prost = "0.12.3"
 tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
-tokio-stream = "0.1.14"
+tokio-stream = { version = "0.1.14", features = ["net"] }
 tonic = "0.10.2"
 exchanges = { path = "../exchanges" }
 protos = { path = "../protos" }
+
+[dev-dependencies]
+lazy_static = "1.4.0"
 
