draft refactor for message ack

--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -18,7 +18,8 @@ log = "0.4.20"
 tonic = "0.10.2"
 tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
 tokio-stream = "0.1.14"
-ruuster-grpc = { path = "../ruuster_grpc" }
+uuid = { version = "1.6.1", features = ["v4"]}
 env_logger = "0.10.1"
+ruuster-grpc = { path = "../ruuster_grpc" }
 protos = { path = "../protos" }
 utils = { path = "../utils" }
