--- a/ruuster_grpc/Cargo.toml
+++ b/ruuster_grpc/Cargo.toml
@@ -15,6 +15,7 @@ prost = "0.12.3"
 tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.14", features = ["net"] }
 tonic = "0.10.2"
+uuid = { version = "1.6.1", features = ["v4"]}
 exchanges = { path = "../exchanges" }
 protos = { path = "../protos" }
 
