--- a/exchanges/Cargo.toml
+++ b/exchanges/Cargo.toml
@@ -13,3 +13,6 @@ prost = "0.12.3"
 tonic = "0.10.2"
 uuid = { version = "1.6.1", features = ["v4"]}
 protos = { path = "../protos" }
+log = "0.4.20"
+lazy_static = "1.4.0"
+env_logger = "0.11.1"
