--- a/exchanges/Cargo.toml
+++ b/exchanges/Cargo.toml
@@ -13,6 +13,7 @@ prost = "0.12.3"
 tonic = "0.10.2"
 uuid = { version = "1.6.1", features = ["v4"]}
 protos = { path = "../protos" }
+ruuster-grpc = { path = "../ruuster_grpc" }
 serde = "1.0.196"
 serde_json = "1.0.113"
 log = "0.4.20"
