--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -13,6 +13,10 @@ path = "./src/client.rs"
 name = "server"
 path = "./src/server.rs"
 
+[[bin]]
+name = "chat-client"
+path = "./src/chat_client/main.rs"
+
 [dependencies]
 log = "0.4.20"
 tonic = "0.10.2"
@@ -21,6 +25,9 @@ tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-th
 tokio-stream = "0.1.14"
 uuid = { version = "1.6.1", features = ["v4"]}
 env_logger = "0.10.1"
+crossterm = "0.27.0"
+ratatui = "0.26.0"
+color-eyre = "0.6.2"
 ruuster-grpc = { path = "../ruuster_grpc" }
 protos = { path = "../protos" }
 utils = { path = "../utils" }
