--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -20,6 +20,7 @@ tokio = { version = "1.34.0", features = ["tokio-macros", "macros", "rt-multi-th
 tokio-stream = "0.1.14"
 uuid = { version = "1.6.1", features = ["v4"]}
 env_logger = "0.10.1"
+exchanges = { path = "../exchanges" }
 ruuster-grpc = { path = "../ruuster_grpc" }
 protos = { path = "../protos" }
 utils = { path = "../utils" }
