[refactor] add new crate for core ruuster features - queues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [workspace]
 
 members = [
+    "queues",
     "exchanges",
     "protos",
     "ruuster_grpc",
     "utils",
-    "apps",
+    "apps"
 ]
 
 resolver = "2"
