--- a/ruuster_grpc/Cargo.toml
+++ b/ruuster_grpc/Cargo.toml
@@ -9,7 +9,7 @@ name = "ruuster_grpc"
 path = "src/ruuster_grpc.rs"
 
 [dependencies]
-log = "0.4.21"
+tracing = "0.1.4"
 env_logger = "0.11.3"
 prost = "0.12.4"
 tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
