--- a/exchanges/Cargo.toml
+++ b/exchanges/Cargo.toml
@@ -13,7 +13,7 @@ prost = "0.12.4"
 tonic = "0.11.0"
 uuid = { version = "1.8.0", features = ["v4"]}
 protos = { path = "../protos" }
-serde = "1.0.201"
+serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 log = "0.4.21"
 lazy_static = "1.4.0"
