feat: make internal message representation separate from external

--- a/ruuster_grpc/Cargo.toml
+++ b/ruuster_grpc/Cargo.toml
@@ -21,6 +21,7 @@ exchanges = { path = "../exchanges" }
 queues = { path = "../queues" }
 protos = { path = "../protos" }
 utils = { path = "../utils" }
+internals =  { path = "../internals" }
 
 [dev-dependencies]
 lazy_static = "1.4.0"
