--- a/queues/Cargo.toml
+++ b/queues/Cargo.toml
@@ -8,10 +8,14 @@ edition = "2021"
 [dependencies]
 tonic = "0.11.0"
 log = "0.4.21"
-tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
+tokio = { version = "1.37.0", features = [
+    "tokio-macros",
+    "macros",
+    "rt-multi-thread",
+] }
 tokio-stream = { version = "0.1.15", features = ["net"] }
-uuid = { version = "1.8.0", features = ["v4"]}
+uuid = { version = "1.8.0", features = ["v4"] }
 
 protos = { path = "../protos" }
 exchanges = { path = "../exchanges" }
-
+internals = { path = "../internals" }
