[feature][wip] add timeout in consumers for graceful shutdown
[feature][wip] solving problems with consumer binary, rest of the features almost complete

[feature] continue working on test-client

[feature][wip] added metadata field to producer - direct exchange support

[feature][wip] continue work on test_client

[feature] working small_test scenario, demo ready

[feature][wip][fix] fixed issue with spawning binaries as child processes

[feature][wip] finished code for all child processes, run-scenario not working yet

[feature][wip] continue working on ruuster ultimate testing client

[feature] add producer process

[fix] removed pngs from repository

--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -34,11 +34,12 @@ opentelemetry = { version = "0.23" }
 opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
 opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
 opentelemetry-semantic-conventions = { version = "0.15" }
-opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
+opentelemetry-stdout = { version = "0.4.0", features = ["trace"] }
 
 tracing = "0.1.4"
 tracing-opentelemetry = "0.24"
-tracing-subscriber = "0.3"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tracing-appender = "0.2.3"
 
 tonic = "0.11.0"
 tonic-reflection = "0.11.0"
@@ -46,6 +47,8 @@ tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-th
 tokio-stream = "0.1.15"
 
 uuid = { version = "1.8.0", features = ["v4"]}
+rand = "0.8.5"
+thiserror = "1.0.61"
 
 serde_json = "1.0.117"
 serde = { version = "1.0.203", features = ["derive"] }
