--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -34,11 +34,12 @@ opentelemetry = { version = "0.23" }
 opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
 opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
 opentelemetry-semantic-conventions = { version = "0.15" }
-opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
+opentelemetry-stdout = { version = "0.4.0", features = ["trace"] }
 
 tracing = "0.1.4"
 tracing-opentelemetry = "0.24"
 tracing-subscriber = "0.3"
+tracing-appender = "0.2.3"
 
 tonic = "0.11.0"
 tonic-reflection = "0.11.0"
