--- a/exchanges/Cargo.toml
+++ b/exchanges/Cargo.toml
@@ -12,9 +12,11 @@ path = "src/exchanges.rs"
 tracing = "0.1"
 prost = "0.12.4"
 tonic = "0.11.0"
-uuid = { version = "1.8.0", features = ["v4"]}
+uuid = { version = "1.8.0", features = ["v4"] }
 protos = { path = "../protos" }
-serde = "1.0.201"
+serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 lazy_static = "1.4.0"
 env_logger = "0.11.3"
+
+internals = { path = '../internals' }
