--- a/queues/Cargo.toml
+++ b/queues/Cargo.toml
@@ -10,8 +10,8 @@ tracing = "0.1"
 tonic = "0.11.0"
 tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.15", features = ["net"] }
-uuid = { version = "1.8.0", features = ["v4"]}
+uuid = { version = "1.8.0", features = ["v4"] }
 
 protos = { path = "../protos" }
 exchanges = { path = "../exchanges" }
-
+internals = { path = "../internals" }
