--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -24,3 +24,22 @@ jobs:
         uses: actions-rs/cargo@v1
         with:
           command: test
+  e2e:
+    name: e2e test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+      - name: Install Protoc
+        uses: arduino/setup-protoc@v2 # for grpc
+      - name: Install stable toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Run e2e test
+        env: 
+          RUUSTER_HOME_DIR: ./
+          RUUSTER_BUILD_DIR: ./
+        run: cd $RUUSTER_HOME_DIR; RUST_LOG=info $RUUSTER_BUILD_DIR/run_scenario  --server-addr "http://127.0.0.1:50051" --config-file "$RUUSTER_HOME_DIR/apps/src/test_client/scenarios/all_consumers.json"   --builder-bin "$RUUSTER_BUILD_DIR/scenario_builder"   --consumer-bin "$RUUSTER_BUILD_DIR/consumer" --producer-bin "$RUUSTER_BUILD_DIR/producer"
