--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -40,6 +40,6 @@ jobs:
           override: true
       - name: Run e2e test
         env: 
-          RUUSTER_HOME_DIR: ./
-          RUUSTER_BUILD_DIR: ./
+          RUUSTER_HOME_DIR: .
+          RUUSTER_BUILD_DIR: .
         run: cd $RUUSTER_HOME_DIR; RUST_LOG=info $RUUSTER_BUILD_DIR/run_scenario  --server-addr "http://127.0.0.1:50051" --config-file "$RUUSTER_HOME_DIR/apps/src/test_client/scenarios/all_consumers.json"   --builder-bin "$RUUSTER_BUILD_DIR/scenario_builder"   --consumer-bin "$RUUSTER_BUILD_DIR/consumer" --producer-bin "$RUUSTER_BUILD_DIR/producer"
