--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -38,7 +38,10 @@ jobs:
           profile: minimal
           toolchain: stable
           override: true
+      - name: Start Ruuster server
+        run: cargo run --bin server
       - name: Run e2e test
         env: 
-          RUUSTER_BUILD_DIR: ./target/debug
+          RUUSTER_BUILD_DIR: target/debug
+          RUUSTER_HOME_DIR: .
         run: RUST_LOG=info $RUUSTER_BUILD_DIR/run_scenario  --server-addr "http://127.0.0.1:50051" --config-file "apps/src/test_client/scenarios/all_consumers.json"   --builder-bin "$RUUSTER_BUILD_DIR/scenario_builder"   --consumer-bin "$RUUSTER_BUILD_DIR/consumer" --producer-bin "$RUUSTER_BUILD_DIR/producer"
