--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -29,12 +29,19 @@ path = "./src/test_client/src/scenario_validator.rs"
 name = "scenario_builder"
 path = "./src/test_client/src/scenario_builder.rs"
 
+[[bin]]
+name = "ruuster_chat"
+path = "./src/ruuster_chat/main.rs"
+
 [dependencies]
 opentelemetry = { version = "0.23" }
 opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
 opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
 opentelemetry-semantic-conventions = { version = "0.15" }
 opentelemetry-stdout = { version = "0.4.0", features = ["trace"] }
+
+crossterm = { version = "0.28.1", features = ["event-stream"] }
+ratatui = "0.27.0"
 
 tracing = "0.1.4"
 tracing-opentelemetry = "0.24"
