--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -41,7 +41,8 @@ opentelemetry-semantic-conventions = { version = "0.15" }
 opentelemetry-stdout = { version = "0.4.0", features = ["trace"] }
 
 crossterm = { version = "0.28.1", features = ["event-stream"] }
-ratatui = "0.27.0"
+ratatui = "0.28.0"
+futures = "0.3.30"
 
 tracing = "0.1.4"
 tracing-opentelemetry = "0.24"
