--- a/crates/ruuster-server/Cargo.toml
+++ b/crates/ruuster-server/Cargo.toml
@@ -16,5 +16,18 @@ ruuster-core = { path = "../ruuster-core" }
 ruuster-router = { path = "../ruuster-router" }
 async-stream = "0.3.6"
 tonic-reflection = "0.14.2"
+opentelemetry = { version = "0.23" }
+opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
+opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
+opentelemetry-semantic-conventions = { version = "0.15" }
+tracing = "0.1.4"
+tracing-opentelemetry = "0.24"
+tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry", "json"] }
+ruuster-grpc = { path = "../../ruuster_grpc" }
+protos = { path = "../../protos" }
+
+[dev-dependencies]
+futures = "0.3"
+uuid = { version = "1.8.0", features = ["v4"] }
 
 
