feat: add Prometheus metrics for observability
Add metrics collection and exposure for monitoring Ruuster:

- Add /metrics endpoint on port 9090 (configurable via RUUSTER_METRICS_ADDR)
- Add /health endpoint for liveness checks
- Instrument all 14 gRPC methods with request counters and latency histograms
- Add gauges for queue and exchange counts
- Add counters for messages produced, consumed, acked, and nacked
- Add Prometheus service to docker-compose (Grafana commented out)
- Include prometheus.yml scrape configuration

Metrics exposed:
- ruuster_grpc_requests_total (counter, labels: method, status)
- ruuster_grpc_request_duration_seconds (histogram, labels: method)
- ruuster_messages_produced_total (counter, labels: exchange)
- ruuster_messages_consumed_total (counter, labels: queue)
- ruuster_messages_acked_total (counter)
- ruuster_messages_nacked_total (counter, labels: requeue)
- ruuster_queues_count (gauge)
- ruuster_exchanges_count (gauge)

Closes #48

--- a/apps/Cargo.toml
+++ b/apps/Cargo.toml
@@ -76,3 +76,12 @@ protos = { path = "../protos" }
 utils = { path = "../utils" }
 
 clap = { version = "4.5.6", features=["derive"]}
+
+# Metrics
+metrics = "0.24"
+metrics-exporter-prometheus = "0.16"
+
+# HTTP server for metrics endpoint
+hyper = { version = "1.5", features = ["server", "http1"] }
+hyper-util = { version = "0.1", features = ["tokio"] }
+http-body-util = "0.1"
