--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,34 @@ services:
       - "16686:16686"
       - "14268:14268"
       - "4317:4317"
+
+  prometheus:
+    image: prom/prometheus:latest
+    ports:
+      - "9091:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--storage.tsdb.path=/prometheus"
+      - "--web.console.libraries=/usr/share/prometheus/console_libraries"
+      - "--web.console.templates=/usr/share/prometheus/consoles"
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+
+# Uncomment the following section to enable Grafana for visualization
+# grafana:
+#   image: grafana/grafana:latest
+#   ports:
+#     - "3000:3000"
+#   environment:
+#     - GF_SECURITY_ADMIN_USER=admin
+#     - GF_SECURITY_ADMIN_PASSWORD=admin
+#     - GF_USERS_ALLOW_SIGN_UP=false
+#   volumes:
+#     - grafana-data:/var/lib/grafana
+#   depends_on:
+#     - prometheus
+
+# volumes:
+#   grafana-data:
