--- a/exchanges/Cargo.toml
+++ b/exchanges/Cargo.toml
@@ -18,5 +18,6 @@ serde = { version = "1.0.201", features = ["derive"] }
 serde_json = "1.0.117"
 lazy_static = "1.4.0"
 env_logger = "0.11.3"
+metrics = "0.24"
 
 internals = { path = '../internals' }
