--- a/queues/Cargo.toml
+++ b/queues/Cargo.toml
@@ -11,6 +11,7 @@ tonic = "0.11.0"
 tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.15", features = ["net"] }
 uuid = { version = "1.8.0", features = ["v4"] }
+metrics = "0.24"
 
 protos = { path = "../protos" }
 exchanges = { path = "../exchanges" }
