--- a/ruuster_grpc/Cargo.toml
+++ b/ruuster_grpc/Cargo.toml
@@ -15,6 +15,7 @@ tokio = { version = "1.37.0", features = ["tokio-macros", "macros", "rt-multi-th
 tokio-stream = { version = "0.1.15", features = ["net"] }
 tonic = "0.11.0"
 uuid = { version = "1.8.0", features = ["v4"]}
+metrics = "0.24"
 
 exchanges = { path = "../exchanges" }
 queues = { path = "../queues" }
