feat: add Grafana dashboard with Prometheus datasource
- Add Grafana with pre-configured Prometheus datasource
- Add Ruuster dashboard with panels for all metrics:
  - Overview stats (queues, exchanges, produced, consumed, acked, nacked)
  - Message throughput graphs (produced/consumed rates by queue/exchange)
  - Acks/Nacks rate over time
  - gRPC request rate and latency (p50, p95) by method
  - gRPC success vs error rate
- Use Docker Compose profiles for optional Grafana startup
- Auto-refresh dashboard every 5 seconds

Usage:
  docker compose up -d                    # Jaeger + Prometheus only
  docker compose --profile monitoring up  # Include Grafana

Grafana UI: http://localhost:3000 (admin/admin)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,19 +22,23 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
-# Uncomment the following section to enable Grafana for visualization
-# grafana:
-#   image: grafana/grafana:latest
-#   ports:
-#     - "3000:3000"
-#   environment:
-#     - GF_SECURITY_ADMIN_USER=admin
-#     - GF_SECURITY_ADMIN_PASSWORD=admin
-#     - GF_USERS_ALLOW_SIGN_UP=false
-#   volumes:
-#     - grafana-data:/var/lib/grafana
-#   depends_on:
-#     - prometheus
+  grafana:
+    image: grafana/grafana:latest
+    profiles:
+      - monitoring
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources:ro
+      - ./grafana/provisioning/dashboards:/etc/grafana/provisioning/dashboards:ro
+      - ./grafana/dashboards:/var/lib/grafana/dashboards:ro
+    depends_on:
+      - prometheus
 
-# volumes:
-#   grafana-data:
+volumes:
+  grafana-data:
